--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "my-app",
+  "name": "Web2",
   "version": "0.1.0",
-  "private": true,
-  "homepage": "http://gilbertofalco.github.io/Web2",
+  "private": true,  
+  "homepage": "https://gilbertofalco.github.io/Web2",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
