--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "Web2",
   "version": "0.1.0",
-  "private": true,  
+  "private": true,
   "homepage": "https://gilbertofalco.github.io/Web2",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
+    "bcrypt": "^5.0.0",
+    "bcrypto": "^5.3.0",
+    "bootstrap": "^4.5.3",
     "react": "^16.13.1",
-    "react-bootstrap": "^1.3.0",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
